[gd_scene load_steps=7 format=3 uid="uid://bd4qvw0srslqr"]

[ext_resource type="Script" uid="uid://7enw11duqhn4" path="res://player/abilities/wand/bullet/bullet.gd" id="1_jhbqf"]
[ext_resource type="Texture2D" uid="uid://cudrpqpjjvdys" path="res://assets/items/electro_ball.png" id="2_swhho"]
[ext_resource type="PackedScene" uid="uid://crx7kk4gj06gp" path="res://misc/hurt_box/hurt_box.tscn" id="3_aff1s"]

[sub_resource type="Gradient" id="Gradient_jhbqf"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_swhho"]
gradient = SubResource("Gradient_jhbqf")
width = 1
height = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jhbqf"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector3(0, 0, 0)

[node name="Bullet" type="Area2D"]
collision_layer = 0
script = ExtResource("1_jhbqf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_swhho")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HurtBox" parent="." instance=ExtResource("3_aff1s")]
ignored_groups = Array[StringName]([&"players"])

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
texture = SubResource("GradientTexture2D_swhho")
process_material = SubResource("ParticleProcessMaterial_jhbqf")

[node name="CollisionDetectionTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="dealt_damage" from="HurtBox" to="." method="_on_hurt_box_dealt_damage"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="delete"]
[connection signal="timeout" from="CollisionDetectionTimer" to="." method="_on_collision_detection_timer_timeout"]

[editable path="HurtBox"]
